testCases/parserTestCases/error/varDecTailE.cs16
/*
    This tests var name
    Author: Chris Kaebe
    Date: Feb 21, 2016
*/

int x[4], y[-5;

int x

void main(int ){
    int x y, z[],x[5],[],;
    int z
    {
        int y;
    }
    ;
